fixed some styling and layout issues

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -7,7 +7,7 @@
 
  .bg-danger, .bg-success{
    padding: 15px;
-   margin: 0 0 10px;
+   margin: 10px 0;
  }
 
 h1, h2 {
